# DeepPockets

./: Cargo.toml  cbindgen.toml
deep_pockets/: DeepPockets.h  DeepPockets.java  build.rs  package-lock.json
src/: cache.rs  database_manager.rs  ffi_c.rs  ffi_java.rs  lib.rs
