[package]
name = "deep_pockets"
version = "0.1.0"
authors = ["Mark Mroz <mark.mroz@shopify.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = "1.0"
serde_json = "1.0"
rusqlite = "0.24.1"
jni = "0.18.0"

[build-dependencies]
cbindgen = "0.6"

[lib]
crate-type = ["staticlib"]